# hub-rust-boilerplate

./: Dockerfile  README.md
api/: Cargo.toml
api/src/: db.rs  handlers.rs  lib.rs  main.rs
api/src/graphql/: mod.rs  schema.rs
api/src/graphql/mutations/: mod.rs
api/src/graphql/queries/: mod.rs
core/: Cargo.toml
core/src/: lib.rs
entity/: Cargo.toml
github/workflows/: apollo_release.yml  cargo.yml  post.yml  release.yml
migration/: Cargo.toml
