[package]
name = "holaplex-rust-boilerplate-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
holaplex-rust-boilerplate-core = { path = "./../core" }
holaplex-rust-boilerplate-entity = { path = "./../entity" }
poem = { version = "1.3.57", features = ["anyhow", "test"] }
async-graphql = { version = "5.0.10", features = [
  "chrono",
  "uuid",
  "log",
  "dataloader",
  "apollo_tracing",
] }
async-graphql-poem = "5.0.10"
async-std = { version = "^1", features = ["attributes", "tokio1"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.104" }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.4.1"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = []
